Paragraph is added

--- a/website.html
+++ b/website.html
@@ -1,3 +1,6 @@
 <html>
   <h1>Big Basket</h1>
 </html>
+<p>
+  Leading Online Supermarket — Select a time slot for delivery and your order will be delivered right to your doorstep. Choose from a wide range of options in every category exclusively handpicked for you. Lowest Prices. Contact Less Delivery. Quality You Can Trust.
+</p>
