--- a/website.html
+++ b/website.html
@@ -1,3 +1,5 @@
 <html>
   <h1>Big Basket</h1>
 </html>
+<p>Is BigBasket owned by Tata?
+  Tata Group became the owner of BigBasket in May 2021, when its Tata Digital subsidiary acquired a 64% majority stake in the company. In January 2023, BigBasket received a $200 million injection from investors, including majority shareholder Tata Digital, taking the company valuation up to $3.2 billion.</p>
